Changelog
=========

2.0.3 (Unreleased)
------------------

- For youtube videos, use the iframe instead simple html5 video tag
  [cekk]

- Automatically get thumbnail image for youtube videos on creation/edit
  [cekk]

- add Google and universal analytics MediaElement.js plugins
  [ivanteoh]

- fix fileUpload fails when Wildcard.Video is registered as the video type
  [displacedaussie]

- add support for separate avconv parameters per output format
  [displacedaussie]

2.0.2 (2015-11-25)
------------------

- fix plone 4 compatibility
  [vangheem]

- fix condition to show youtube video or file video
  [neilferreira, cekk]

- updated Italian translations
  [cekk]

2.0.1 (2015-11-11)
------------------

- add celery_tasks entry point
  [vangheem]

2.0.0 (2015-11-11)
------------------

- add missing flashmediaelement.swf file and simplify build
  [senner]

- be able to provide default width/height for videos in admin
  [vangheem]

- fix use of captions
  [vangheem]

- plone 5 compatibility
  [vangheem]


1.2b5 (2014-09-07)
------------------

- fix player to get around not liking urls

1.2b4 (2014-09-07)
------------------

- fix audio template og:url


1.2b3 (2014-09-05)
------------------

- Fix issues with flash fallback (such as on IE8) [djay]
- Fix documentation to install avconv [djay]
- Fix to enable fullscreen mode in flash fallback mode [djay]



1.2b2 (2014-06-20)
------------------

- Enabled auto resizing of video element in tile
  [zombified]
- i18n support and italian translation
  [keul]
- More complete uninstall profile
  [keul]

1.2b1 (2014-06-12)
------------------

- Upgrade MediaElement.js to 2.14.2.
  [davidjb]
- Remove extraneous files from MediaElement.js distribution.
  [davidjb]
- Add collective.cover tile
  [zombified]


1.1 (2014-04-25)
----------------

- add open graph data
  [vangheem]

1.0b2 (2014-03-05)
------------------

- fix convert video
  [vangheem]

- Fix minor typo in available views for audio/video types. This previously